# obscurity-engine

./: .gitignore  DESIGN.md  Dockerfile  PLAN.md  README.md  TODOS.md  docker-compose.yml  railway.json  render.yaml  start.sh  test_api.js
.github/workflows/: keepwarm.yml
backend/: .env.example  Cargo.toml  Dockerfile  railway.toml
backend/migrations/: 0001_phase1_identity_events.sql
backend/src/: api.rs  auth.rs  cache.rs  db.rs  geo_tags.rs  handlers.rs  lastfm.rs  listenbrainz.rs  main.rs  metrics.rs  models.rs  ratelimit.rs  service.rs  spotify.rs  utils.rs
backend/src/pipeline/: candidates.rs  mod.rs  scoring.rs  seeds.rs  tag_graph.rs  track_candidates.rs  track_scoring.rs  track_seeds.rs
docs/: README.md  blend-n348-2026-07-03.md  competitive-landscape-2026-07.md  design-delta-2026-07-02.md  dev-tasks-overnight-2026-07-02.md  explanation-how-it-works.md  explanation-privacy.md  explanation-scoring.md  handoff-2026-07-02.md  howto-deploy.md  howto-run-locally.md  phase0-tasks-2026-07-03.md  phase1-tasks-2026-07-03.md  reference-api.md  reference-eval-harness.md  reference-schema.md  roadmap-10x-2026-07-02.md  roadmap.md  spike-bandcamp-2026-07-04.md  spike-cege-coverage-2026-07-03.md  spike-listenbrainz-2026-07-03.md  spike-spotify-quota-2026-07-03.md  tutorial-getting-started.md
eval/: README.md  adaptive_backfill_n60.json  anchor_discovery_n26.json  anchor_flat_n26.json  anchor_truefans_n26.json  baseline.json  baseline2.json  baseline_n26.json  blend_debiased_n54.json  blend_n348.json  blend_n348_anchor_2025-06-10.json  blend_n348_anchor_2025-12-10.json  blend_n348_anchor_2026-06-10.json  build_cohort.py  cache.py  cohort.txt  cohort_debiased.txt  config.py  discovery_global_n26.json  discovery_n26.json  flat_n26.json  genre_clamp_p25_n26.json  genre_clamp_p50_n26.json  genre_clamp_p75_n26.json  harness.py  lastfm.py  lb_debiased_n54.json  lb_paired_bootstrap.py  lb_paired_bootstrap_ma.py  listenbrainz.py  match.json  merge_anchor_runs.py  metrics.py  mh_base.json  pipeline.py  sweep_cap100k.json  sweep_cap100k_tilt.json  sweep_cap150k_tilt.json  sweep_cap200k.json  sweep_cap50k.json  (+30 more)
eval/spikes/: .gitignore  __init__.py  cege_coverage.py  mb_coverage.json  missed_set.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts  vitest.setup.ts
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ApiKeyModal.tsx  ArtistCard.test.tsx  ArtistCard.tsx  ArtistList.tsx  BottomFilter.tsx  BottomNav.tsx  CompareSection.test.tsx  CompareSection.tsx  DepthTierList.tsx  DiscoveryMatrix.test.tsx  DiscoveryMatrix.tsx  DismissedRow.tsx  EmptyState.tsx  ErrorState.test.tsx  ErrorState.tsx  HeroPicks.test.tsx  HeroPicks.tsx  IcebergVisual.tsx  LandingView.tsx  LoadingState.tsx  (+14 more)
scripts/: mb_bandcamp_coverage.py
(+42 files in other folders)
