[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = "0.15"
futures = "0.3"
urlencoding = "2.1"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
# Non-optional so the default `cargo build --release` compiles and runs the
# Redis-backed cache path. When REDIS_URL is unset the in-memory store is used
# and Redis is never contacted.
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
