[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors", "timeout"] }
dotenvy = "0.15"
futures = "0.3"
urlencoding = "2.1"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
# Non-optional so the default `cargo build --release` compiles and runs the
# Redis-backed cache path. When REDIS_URL is unset the in-memory store is used
# and Redis is never contacted.
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
# Postgres persistence (Phase 1). Runtime queries only (no `query!` macros), so
# `cargo build`/`cargo test` are green with NO DATABASE_URL set — nothing here
# is contacted until DATABASE_URL is present at runtime. rustls (not native-tls)
# to avoid an OpenSSL system dependency on Windows/Railway.
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
md-5 = "0.10"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
# Router-level tests (oneshot) for the no-DB paths (400/429/anonymous/status).
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
